Small fixes and added report pdf and video link.